syntax = "proto3";

package sync_with_activity;

service ActivityService {
  rpc Create (CreateActivity) returns (Activity);
  rpc FindOne (ActivityById) returns (Activity);
  rpc FindMany (FindManyParams) returns (stream Activity);
}

message FindManyParams {}

message ActivityById {
  string id = 1;
}

message CreateActivity {
  string name = 1;
  string description = 2;
  string owner_id = 3;
  string target_date_iso_string = 4;
  int32 max_participants = 5;
  bool require_line = 6;
  bool require_discord = 7;
  string tag = 8;
  optional string location = 9;
}

message Activity {
  string id = 1;

  // the same with `CreateActivity` message
  string name = 2;
  string description = 3;
  string owner_id = 4;
  string target_date_iso_string = 5;
  int32 max_participants = 6;
  bool require_line = 7;
  bool require_discord = 8;
  string tag = 9;
  optional string location = 10;

  repeated string joined_user_ids = 11;
  repeated string pending_user_ids = 12;
}